Add new AppIcon. Add new File Icon. Add new File Fill.

--- a/Vocablo/Info.plist
+++ b/Vocablo/Info.plist
@@ -32,8 +32,10 @@
 			<string>Vocabulary Transfer</string>
 			<key>UTTypeIcons</key>
 			<dict>
+				<key>UTTypeIconBackgroundName</key>
+				<string>File Background</string>
 				<key>UTTypeIconBadgeName</key>
-				<string></string>
+				<string>File Icon</string>
 			</dict>
 			<key>UTTypeIdentifier</key>
 			<string>com.marceljaeger.vocabulary</string>
