Create UnitTests for the extended ModelContext methodes.

--- a/Vocablo.xcodeproj/xcshareddata/xcschemes/Vocablo.xcscheme
+++ b/Vocablo.xcodeproj/xcshareddata/xcschemes/Vocablo.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9F6C1B0C2B4C584F008717D5"
+               BuildableName = "VocabloTests.xctest"
+               BlueprintName = "VocabloTests"
+               ReferencedContainer = "container:Vocablo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
